Fix CORS with working API URL

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     </div>
 
     <script>
-        const API_URL = 'https://script.google.com/macros/s/AKfycbzYXs42SDv1gD71kb1mRzIMjHVlUg9q1oNme2ltY0PvBqspVLmqoMALou8wzW9A9xDe/exec';
+        const API_URL = 'https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLgVjK8e77muLZ-ZYaBGSIZDnP1Lja8jp6D83hj1WU-Whn8ARV5QDS-8LmCz78yfQ4aMiTjWzGem2L9b_E6_MY_97GcwkeLl2KwcdRbb4lDsy6RlyUStFmfxbwQ9K_Z3-JYIr-A3dV-rg0I5oI87Im3K5ywx_2vNKzu1-suNeP53QDB0hXChIrB6zZm9XgLQxznNL7xVBbvBtcjr29XF8FuGOH1nYeDsiO7Bho7pHklpvmmQQ9e4kpAjBMmp7V69vHqNK2NMhK9NmFZ72wadrKr2pMg1dw&lib=MH0_AQUMjPyK3sii-h8zKOxh_e8d90qgN';
 
         async function searchSongs() {
             const genre = document.getElementById('genre').value;
